--- a/app/assets/stylesheets/ramens/index.css
+++ b/app/assets/stylesheets/ramens/index.css
@@ -20,3 +20,18 @@
 .item{
   text-align: center;
 }
+
+.mypage{
+  text-align: center;
+}
+
+.check{
+  margin-top: 30px;
+}
+
+.share6{
+  border: 1px solid black;
+  padding: 10px;
+  background-color: lightcyan;
+  font-size: 30px;
+}
