--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -5,10 +5,10 @@
 
     <div class= "Account__info">
     
-      <h1 class="border-bottom-1"> Edit an event 🍻</h1>
+      <h1> Edit an event 🍻</h1>
 
       <div class="Account_link">
-        <%=link_to '⇨ MyPage', items_path(current_user), class:"back-page-btn" %>
+        <%=link_to '⇨ MyPage', items_path(current_user), class:"share4" %>
       </div>
     </div>
 
