--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,9 +6,9 @@
     <div class="Account_link">
       <% if user_signed_in? %>
     
-          <%= link_to '⇨ MyPage', items_path(current_user), class: "share"%>
+          <%= link_to '⇨ MyPage', items_path(current_user), class: "share4"%>
         or
-          <%= link_to '🐰 SharePage 🐰', sharings_path, class: "share"%>
+          <%= link_to '🐰 SharePage 🐰', sharings_path, class: "share5"%>
         
         
           <%= link_to '⇨ Logout', destroy_user_session_path, method: :delete, class: "logout" %>
@@ -31,7 +31,7 @@
    
     <div class = "list">
       <% @events.each do |event| %>
-        <% if current_user.id == event.user_id %>
+        <%# <% if current_user.id == event.user_id %> 
           <ul class= "list-list"> 
             <li class='show-list'>  
 
@@ -42,14 +42,20 @@
 
                       <div class='event2-time'>
                         <br>
-                          <%=  event.date%>    
+                          <b> Time : </b><%=  event.date%>    
                             
                           ( <%= event.start_at.strftime( "%H:%M" ) %>
                             〜
                           <%= event.finish_at.strftime( "%H:%M" ) %> )
                         <br>
                       </div>
-                      <%= event.liked_users.count %>
+                      <b>members: </b><%= event.liked_users.count %> people 
+
+
+                      <% if current_user == event.user %>
+                        <%= link_to "( see 👀 )",event_path(event.id) %>
+                      <% end%>
+                        
                         <%# <div class='item-img-content'>
                           <%= image_tag event.image, class: "item-img" if item.image.attached?%>
                         <%# </div> %> 
@@ -71,7 +77,7 @@
                     </div>   
             </li>
           </ul>
-        <% end %>  
+        <%# <% end %>   
       <% end %> 
     </div>
   
