--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -5,10 +5,10 @@
 
     <div class= "Account__info">
     
-      <h1 class="border-bottom-1">EditPage </h1>
+      <h1>EditPage </h1>
 
       <div class="Account_link">
-        <%=link_to '⇨ back to MyPage', items_path(current_user), class:"back-page-btn" %>
+        <%=link_to '⇨ back to MyPage', items_path(current_user), class:"share4" %>
       </div>
     </div>
 
