--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -4,10 +4,10 @@
 
     <div class= "Account__info">
 
-      <h1 class="border-bottom-1">Fill in & Share ramen 🍜</h1>
+      <h1>Fill in & Share ramen 🍜</h1>
 
       <div class="Account_link">
-        <%=link_to '⇨ back to MyPage', items_path(current_user), class:"back-page-btn" %>
+        <%=link_to '⇨ back to MyPage', items_path(current_user), class:"share4" %>
       </div>
 
     </div>
