--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,14 +1,16 @@
 <div class="AccountPage">
   <div class="Account__info">
    
-      <h1>MyPage </h1>
+      <h1>MyPage</h1>
     
   
     <div class="Account_link">
         <% if user_signed_in? %>
       
             <%= link_to 'Plan', plans_path, class: "share1"%>
-
+            
+            <%= link_to ' Diary ', blogs_path, class: "back2"%>
+            or
             <%= link_to '🐰 SharePage 🐰', sharings_path, class: "share5"%>
             or
             <%= link_to '🍻 EventPage 🍻', events_path, class: "share2"%>
@@ -28,55 +30,82 @@
   </div>
  
   <div class='item1-contents'>
-    <div class="item__info">
+    <div class="item_＿info">
       <h6>  Welcome back , <b><%= link_to current_user.nickname, user_path(current_user)%></b> ! </h6>
 
     </div>
     
   
+
+    <ul class = "select1">
+          <br><li><%= "Let's share your favorite ramen on " %><%= link_to '🐰 SharePage 🐰', sharings_path, class: "share5"%><br></li>
+          <br><li><%= "Plan or check out events on "%><%= link_to '🍻 EventPage 🍻', events_path, class: "share2"%><br></li>
+          <br><li><%= "Check out the events you'll attend on "%><%= link_to 'Plan', plans_path, class: "share1"%><br></li>
+          <br><li><%= "Record your event schedule and ramen history on"%><%= link_to 'Diary ', blogs_path, class: "back2"%></li>
+    </ul>
+
+
+
     <div class = "list">
       <% @items.each do |item| %>
-        <ul class = "select1">
-          <br><li><%= "Let's share your favorite ramen in " %><%= link_to '🐰 SharePage 🐰', sharings_path, class: "share5"%><br></li>
-          <br><li><%= "Plan or check out events in "%><%= link_to '🍻 EventPage 🍻', events_path, class: "share2"%><br></li>
-          <br><li><%= "Check out the events you'll attend in "%><%= link_to 'Plan', plans_path, class: "share1"%><br></li>
+        
+
+        <% if current_user == item.user %>
+          <%# <% if item.present? %>  
+            <ul class= "list-list"> 
+              <li class='show-list'>  
+
+                        <div class='item-info'>
+                          <h3 class='item-name'>
+                            <%= link_to item.title,item_path(item.id), method: :get %>    
+                          </h3>
+                            <div class='item-img-content'>
+                              <%= image_tag item.image, class: "item-img" if item.image.attached?%>
+                            </div>
+
+                          <%# <div class='user-date'>
+                            <span>Contributor : <%= link to item.user.name %></span>  
+                          <%# </div>   %>
+                          
+                          <ul class="more_list">
+                            <% if user_signed_in? %>          
+                              <% if current_user == item.user %>  
+                              <div class = "edit1-destroy1">
+                                <%= link_to "EDIT 📝", edit_item_path(item.id), method: :get, class: "item-edit" %> or <%= link_to "DELETE ❌", item_path(item.id), method: :delete, class:"item-destroy" %>
+                              </div>
+                              <% end %> 
+                            <% end %> 
+                          </ul>  
+
+                        </div>   
+              </li>
+            </ul>
+          <%# <% else %>  
+           
+           
+          <%# <% end %>  
+
+        <% end %> 
+    
+      <% end %> 
+      
+      <div class="example">
+        <b><br><%= "Let's post 📸 !" %></b><br>
+      </div>
+        <ul class= "list-list"> 
+              <li class='show-list'>  
+
+                        <div class='item-info'>
+                          <h3 class='item-name'>
+                            <%= link_to "ex: とうそんの醤油ラーメン","#"%>    
+                          </h3>
+                            <div class='item-img-content'>
+                              <%= image_tag "ramen-intro02.png", class: "item-img" %>
+                            </div> 
+                        </div>   
+              </li>
         </ul>
 
-          <% if current_user == item.user %>
-          <ul class= "list-list"> 
-            <li class='show-list'>  
-
-                      <div class='item-info'>
-                        <h3 class='item-name'>
-                          <%= link_to item.title,item_path(item.id), method: :get %>    
-                        </h3>
-                          <div class='item-img-content'>
-                            <%= image_tag item.image, class: "item-img" if item.image.attached?%>
-                          </div>
-
-                        <%# <div class='user-date'>
-                          <span>Contributor : <%= link to item.user.name %></span>  
-                        <%# </div>   %>
-                        
-                        <ul class="more_list">
-                          <% if user_signed_in? %>          
-                            <% if current_user == item.user %>  
-                            <div class = "edit1-destroy1">
-                              <%= link_to "EDIT 📝", edit_item_path(item.id), method: :get, class: "item-edit" %> or <%= link_to "DELETE ❌", item_path(item.id), method: :delete, class:"item-destroy" %>
-                            </div>
-                            <% end %> 
-                          <% end %> 
-                        </ul>  
-
-                      </div>   
-            </li>
-          </ul>
-          <% end %> 
-        
-          
-        
-      <% end %> 
-    
     </div>
   
 
