--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -59,6 +59,20 @@
         </ul>
        
       <% end %> 
+      <div class= "example2">
+        <%= "Join many events 🤹🏻‍♂️ !"%>
+        <br><br>
+        <%= "→→→  "%><%= link_to '🍻 EventPage 🍻', events_path, class: "share2"%><%= "  ←←←"  %>
+      </div>
+        <ul class= "list-list"> 
+          <li class='show-list'>  
+            <div class='item-info'>
+              <h3 class='event-name'>
+                <%= link_to "ex: とうそんのラーメンを全種食べよう!", "#" %>    
+              </h3>  
+            </div>   
+          </li>
+        </ul>
     
     </div> 
    
