--- a/app/views/sharings/index.html.erb
+++ b/app/views/sharings/index.html.erb
@@ -62,7 +62,24 @@
               </div>   
             </li>
           </ul> 
-        <% end %>   
+        <% end %>  
+
+        <div class="example">
+          <b><br><%= "Let's post 📸 !" %></b><br>
+        </div>
+          <ul class= "list-list"> 
+              <li class='show-list'>  
+
+                        <div class='item-info'>
+                          <h3 class='item-name'>
+                            <%= link_to "ex: とうそんの醤油ラーメン","#"%>    
+                          </h3>
+                            <div class='item-img-content'>
+                              <%= image_tag "ramen-intro02.png", class: "item-img" %>
+                            </div> 
+                        </div>   
+              </li>
+          </ul> 
       </div>   
 
         
