--- a/app/assets/stylesheets/items/index.css
+++ b/app/assets/stylesheets/items/index.css
@@ -63,8 +63,8 @@ h6{
 .AccountPage{
   background-color: lightcyan;
   padding:  10px;
-  width: 100vw;
-  height: 100vh; 
+  width: 100%;
+  height: 100%; 
 }
 
 
