--- a/app/assets/stylesheets/plans/index.css
+++ b/app/assets/stylesheets/plans/index.css
@@ -8,10 +8,35 @@
 .AccountPage3{
   background-color: pink;
   padding:  10px;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
-html{
-  margin: none;
+/* html{
+  padding: 0;
+} */
+
+.toppage{
+  background-color: lightsteelblue;
+  width: 100%;
+  height: 100%;
 }
+
+/* html{
+  background-color: lightsteelblue;
+} */
+
+.example{
+  font-size: larger;
+  color: darkslategrey;
+  border-top: solid 1px darkslategrey;
+  margin-top: 50px;
+}
+
+.example2{
+  font-size: larger;
+  color: darkslategrey;
+  border-top: solid 1px darkslategrey;
+  margin: 50px 0;
+}
+
