--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -51,34 +51,34 @@
                       </div>
                       <b>members: </b><%= event.liked_users.count %> people 
 
-
                       <% if current_user == event.user %>
                         <%= link_to "( see 👀 )",event_path(event.id) %>
                       <% end%>
-                        
-                        <%# <div class='item-img-content'>
-                          <%= image_tag event.image, class: "item-img" if item.image.attached?%>
-                        <%# </div> %> 
-
-                      <%# <div class='user-date'>
-                        <span>Contributor : <%= link to item.user.name %></span>  
-                      <%# </div>   %>
-                      
-                      <%# <ul class="more_list">
-                        <% if user_signed_in? %>          
-                          <%# <% if current_user == event.user %>  
-                            <%# <div class = "edit1-destroy1">
-                              <%# <%= link_to "EDIT 📝", edit_event_path(event.id), method: :get, class: "item-edit" %> 
-                              <%# <%= link_to "DELETE ❌", event_path(event.id), method: :delete, class:"item-destroy" %> 
-                            <%# </div> %>
-                          <%# <% end %>  
-                        <%# <% end %>  
-                      <%# </ul>   %> 
                     </div>   
             </li>
           </ul>
         <%# <% end %>   
       <% end %> 
+      <div class = "example2">
+        <%= "Plan an event 📆 !"%>
+      </div>
+        <ul class= "list-list"> 
+          <li class='show-list'>  
+            <div class='item-info'>
+              <h3 class='event-name'>
+                <%= link_to "ex: とうそんのラーメンを全種食べよう!", "#" %>    
+              </h3>
+              <div class='event2-time'>
+                <br>
+                  <b> Time : </b><%= "2021-🥟-🍜 (🍥🍥 :🍥🍥 ~ 🥢🥢 :🥢🥢)"%>    
+                <br>
+              </div>
+              <b>members: </b><%= "👯" %> people 
+            </div>  
+          </li>
+        </ul>
+      
+
     </div>
   
 
