--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,6 +6,7 @@
     <%# <%= render 'layouts/error_messages', model: f.object %> 
     
       <%# 会社名とインターンの説明 %>
+    <div class= "profile1">
       <div class="edit-users">
         <div class= "user-name">
           <div class="weight-bold-text">
@@ -37,6 +38,7 @@
         <%=link_to '⇨ MyProfile', user_path(current_user), class:"back-profile-btn" %>
         <br>
       </div>
+    </div>
   <% end %>
    
 
