--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -42,6 +42,13 @@
       </tbody>
   </table>
 
-<%= link_to 'Edit 📝', edit_blog_path(@blog), class: "share" %> 
-|
-<%= link_to ' ⇨ Back', blogs_path, class: "back2" %>
+<%# <%= link_to 'Edit 📝', edit_blog_path(@blog), class: "share" %>  
+
+<div class= "diary-edit">
+  <%= link_to '  👀', blog_path(@blog)%></td>
+  <%= link_to '  📝', edit_blog_path(@blog) %></td>
+  <%= link_to '  ❌',blog_path(@blog), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  |
+
+  <%= link_to ' ⇨ Back', blogs_path, class: "back2" %>
+</div>
