--- a/app/assets/stylesheets/sharings/index.css
+++ b/app/assets/stylesheets/sharings/index.css
@@ -32,3 +32,32 @@
   margin-left :50px
 }
 
+.chat{
+  text-align: center; 
+  margin: 40px auto; 
+  padding: 5px;
+  background-color:mistyrose;
+  border: 1px solid red;
+  width: 20%;
+}
+
+.chat1{
+  margin: 50px 0;
+  text-align: center;
+}
+
+.if{
+  color:tomato;
+}
+
+.chatpage{
+  background-color: mistyrose;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+.list-pict1{
+  width: 30%;
+  height: 30%;
+}
